DS-511 Windows high contrast fixes
Use semantic background colour name for notification border
Add foreground colour variable for notification banner
Support mark background for high contrast mode

--- a/src/components/search-result/_search-result.scss
+++ b/src/components/search-result/_search-result.scss
@@ -35,10 +35,6 @@
             color: $ds_colour__text--secondary;
             font-weight: $bold;
         }
-
-        &__summary mark {
-            background-color: $ds_colour__background--secondary;
-        }
     }
 
     &__title {
@@ -62,9 +58,13 @@
         margin: 0;
 
         mark {
-            background-color: $ds_colour__background--primary;
+            background-color: inherit;
             color: inherit;
             font-weight: $bold;
+
+            @media screen and (forced-colors: active) and (prefers-contrast: more) {
+                background-color: Mark;
+            }
         }
     }
 
